fix: haproxy cfg

--- a/terraform/files/configs/haproxy.tftpl.cfg
+++ b/terraform/files/configs/haproxy.tftpl.cfg
@@ -1,30 +1,30 @@
-frontend kubeAPI
+frontend kube-api
     bind :6443
     mode tcp
-    default_backend kubeAPI_backend
+    default_backend kube-api-backend
 frontend konnectivity
     bind :8132
     mode tcp
-    default_backend konnectivity_backend
-frontend controllerJoinAPI
+    default_backend konnectivity-backend
+frontend controller-join-api
     bind :9443
     mode tcp
-    default_backend controllerJoinAPI_backend
+    default_backend controller-join-api-backend
 
-backend kubeAPI_backend
+backend kube-api-backend
     mode tcp
     %{ for c in controllers ~}
     server ${c.name} ${c.addr}:6443 check check-ssl verify none
     %{ endfor ~}
-backend konnectivity_backend
+backend konnectivity-backend
     mode tcp
     %{ for c in controllers ~}
-    server ${c.name} ${c.addr}:6443 check check-ssl verify none
+    server ${c.name} ${c.addr}:8132 check check-ssl verify none
     %{ endfor ~}
-backend controllerJoinAPI_backend
+backend controller-join-api-backend
     mode tcp
     %{ for c in controllers ~}
-    server ${c.name} ${c.addr}:6443 check check-ssl verify none
+    server ${c.name} ${c.addr}:9443 check check-ssl verify none
     %{ endfor ~}
 
 listen stats
